# Inventra

./: .gitignore  Dockerfile  README.md  app.py  gunicorn.conf.py  pyproject.toml  render.yaml  requirements.txt
endpoints/: best_sellers_endpoint.py  dashboard_endpoint.py  inventory_endpoint.py  locations_endpoint.py  orders_endpoint.py  products_endpoint.py  report_endpoint.py
services/: shopify_api.py
static/css/: dashboard.css
static/js/: dashboard.js
templates/: dashboard_best_sellers.html  dashboard_static.html  dashboard_top_30_120.html  home.html
