[tool.poetry]
name = "inventra"
version = "0.1.0"
description = ""
authors = ["Your Name <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.0.3"
flask-cors = "4.0.0"
requests = "2.32.3"
pandas = "2.1.4"
openpyxl = "3.1.2"
python-dotenv = "1.0.1"
prophet = "1.1.5"
plotly = "5.24.1"
gunicorn = "22.0.0"
numpy = "1.25.2"
reportlab = "4.2.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"